--- a/main.html
+++ b/main.html
@@ -11,13 +11,7 @@
 
 	<h1>Time and Space Complexity</h1>
 	<p>Time Complexity measures how the runtime of an algorithm grows with the size of the input. It's a way to evaluate the efficiency of an algorithm in terms of how much time it takes to execute as the input size increases.</p>
-	<p><b>Space Complexity</b> refers to the amount of memory or space required by an algorithm to execute, as a function of the input size. When an algorithm has a space complexity of 𝑂()
-(
-𝑛
-)
-O(n), it means the memory required grows linearly with the input size 
-𝑛
-n</p>
+	<p><b>Space Complexity</b> refers to the amount of memory or space required by an algorithm to execute, as a function of the input size. When an algorithm has a space complexity of O(n), it means the memory required grows linearly with the input size.</p>
 	<script type="text/javascript" src="./script.js">
 </script>
 
